--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.5
   table_calendar: ^3.0.9
   badges: ^3.1.1
+  awesome_notifications: ^0.8.2
 
 dev_dependencies:
   flutter_test:
